--- a/src/main/resources/assets/aeinfinitybooster/lang/pt_br.json
+++ b/src/main/resources/assets/aeinfinitybooster/lang/pt_br.json
@@ -1,5 +1,5 @@
 {
-    "itemGroup.aeinfinitybooster": "Intensificador AE Infinity",
+    "item_group.aeinfinitybooster.tab": "Intensificador AE Infinity",
     "item.aeinfinitybooster.infinity_card": "Intensificador de alcance infinito",
     "item.aeinfinitybooster.dimension_card": "Cartão de dimensão"
   }
