--- a/src/main/resources/assets/aeinfinitybooster/lang/ru_ru.json
+++ b/src/main/resources/assets/aeinfinitybooster/lang/ru_ru.json
@@ -1,5 +1,5 @@
 {
-  "itemGroup.aeinfinitybooster": "AE Infinity Booster",
+  "item_group.aeinfinitybooster.tab": "AE Infinity Booster",
   "item.aeinfinitybooster.infinity_card": "Усилитель дальности",
   "item.aeinfinitybooster.dimension_card": "Плата измерения"
 }
