--- a/src/main/resources/assets/aeinfinitybooster/lang/en_us.json
+++ b/src/main/resources/assets/aeinfinitybooster/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "itemGroup.aeinfinitybooster": "AE Infinity Booster",
+  "item_group.aeinfinitybooster.tab": "AE Infinity Booster",
   "item.aeinfinitybooster.infinity_card": "Infinity Range Booster",
   "item.aeinfinitybooster.dimension_card": "Dimension Card"
 }
